# rust-benchmark-test

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
benches/: loop.rs  output.txt
dev/bench/: data.js
src/: lib.rs  main.rs
